learning section2 and section3

--- a/practice1.html
+++ b/practice1.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>vue.js学習1</title>
+		<title>vue.js学習~23</title>
 		<link rel="stylesheet" type="text/css" ref="css/style.css" />
 		<script src="js/vue.js"></script>
 	</head>
