--- a/practice4.html
+++ b/practice4.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>vue.js学習51~64</title>
+		<title>vue.js学習51~64,75</title>
 		<link rel="stylesheet" type="text/css" href="css/common.css" />
 		<script src="js/vue.js"></script>
 	</head>
@@ -11,8 +11,12 @@
 			<p>{{message}}</p>
 			<button @click="message = 'ボタンから変更'">変更</button>
 			<aaa></aaa>
+			<ccc></ccc>
 		</div>
 		<div id="app2">
+			<bbb></bbb>
+			<bbb></bbb>
+			<bbb></bbb>
 			<p>{{message}}</p>
 			<button @click="changeMessage1">インスタンス1のmessageを変更</button>
 			<button @click="message = 'ボタンから変更'">変更</button>
@@ -28,14 +32,43 @@
 			<button @click="destroy">インスタンス破壊</button>
 		</div>
 		<script>
+			// ローカルコンポーネント
+			var component = {
+				data: function() {
+					return {
+						number: 15
+					}
+				},
+				template: '<p>{{number}}<button @click="increment">+1</button></p>',
+				methods: {
+					increment: function() {
+						this.number += 1;
+					}
+				}
+			}
 			var data = {
 				firstname: '山田',
 				lastname: '太郎'
 			}
-			//複数のインスタンスで共通して使用したい事がある場合は、componentが必要。
+			// グローバルコンポーネント
+			// 複数のインスタンスで共通して使用したい事がある場合は、componentが必要。
 			Vue.component('aaa', {
 				template: '<p>ウクライナ</p>'
-			});
+			})
+			//component内でのdataは関数で記載しないといけない。
+			Vue.component('bbb', {
+				data: function() {
+					return {
+						number: 13
+					}
+				},
+				template: '<p>{{number}}<button @click="increment">+1</button></p>',
+				methods: {
+					increment: function() {
+						this.number += 1;
+					}
+				}
+			})
 			var vm1 = new Vue({
 				el:"#app1",
 				data: {
@@ -47,6 +80,9 @@
 						// 自分自身のインスタンスを取得
 						return this.$data;
 					}
+				},
+				components: {
+					'ccc': component // ローカルコンポーネント グローバルコンポーネントより使用される。
 				}
 			})
 			console.log(vm1.$data)
